:apple: fix style on mobile screen

--- a/src/style.scss
+++ b/src/style.scss
@@ -92,7 +92,7 @@ button {
     gap: 8px;
     padding-left: 7px;
     color: #fff;
-    transition: max-width 0.3s ease-in-out;
+    transition: max-width 0.3s ease-in-out, width 0.3s ease-in-out;
     overflow: hidden;
     text-transform: uppercase;
     font-size: 10px;
@@ -117,7 +117,7 @@ button {
       background-color: #24a1de;
     }
     &:hover {
-      width: fit-content;
+      width : auto;
       max-width: 150px;
       // border-radius: 20px;
       // padding-left: 0;
@@ -400,13 +400,6 @@ h6 {
 }
 
 @media screen and (max-width: 768px) {
-  button.social-media_btn {
-    width: 45px !important;
-    height: 45px !important;
-    svg {
-      width: 30px !important;
-    }
-  }
 
   .app-container {
     width: 98%;
